// src/proto/movie.proto
syntax = "proto3";

package movie;

import "general.proto";

message Movie {
  string id = 1;
  string name = 2;
  int32 age_restriction = 3;
}

message ListMoviesResponse {
  repeated Movie movies = 1;
  general.ResponseStatus status = 2;
  general.PaginationMetaResult pagination = 3;
}